--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -160,7 +160,7 @@
     "HOME_MENU": "Inizio",
     "HOME_BUSINESS_PLATFORM": "La piattaforma commerciale SKI",
     "TTFN": {
-      "TITLE": "Gestione dei Numeri del quadro d'orario",
+      "TITLE": "Gestione dei numeri del quadro d'orario",
       "TITLE_HEADER": "Numeri del quadro d'orario",
       "TITLE_MENU": "Numeri del quadro d'orario",
       "DESCRIPTION": "Registrare, gestire e visualizzare i numeri del quadro d'orario.",
@@ -173,7 +173,7 @@
       "PATH_TEXT": "Dalla cartella delle linee"
     },
     "BODI": {
-      "TITLE": "Cartella delle organizzazioni aziendale",
+      "TITLE": "Gestione delle organizzazioni aziendali",
       "TITLE_HEADER": "Organizzazioni aziendali",
       "TITLE_MENU": "Organizzazioni aziendali",
       "DESCRIPTION": "Registrare, gestire e visualizzare le organizzazioni aziendali (SBOID).",
