--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -73,7 +73,7 @@
       "SUPERVISOR": "Supervisor",
       "SUPER_USER": "Super User",
       "WRITER": "Writer",
-      "atlas-admin": "Atlas Admin"
+      "atlas-admin": "atlas Admin"
     },
     "SEARCH": {
       "VALIDITY": "Gültig am",
