ATLAS-1641: Add statement id in csv.

--- a/line-directory/src/main/resources/hearing/translations/csvHeaders.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders.properties
@@ -2,6 +2,7 @@ cantonAbbreviation=Kanton
 timetableFieldNumber=Fahrplanfeld-Nr.
 timetableFieldNumberDescription=Fahrplanfeldbezeichnung
 stopPlace=Haltestelle
+timetabeHearingStatementId=ID
 transportCompanyAbbreviations=Abkürzung Transportunternehmung
 transportCompanyDescriptions=Name Transportunternehmung
 statement=Stellungnahme
