--- a/line-directory/src/main/resources/hearing/translations/csvHeaders_fr.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders_fr.properties
@@ -2,6 +2,7 @@ cantonAbbreviation=Canton
 timetableFieldNumber=Numéro du tableau-horaire
 timetableFieldNumberDescription=Désignation numéro d'horaire
 stopPlace=Arrêt
+timetabeHearingStatementId=ID
 transportCompanyAbbreviations=Abréviation entreprise de transport
 transportCompanyDescriptions=Nom entreprise de transport
 statement=Prise de position
