--- a/line-directory/src/main/resources/hearing/translations/csvHeaders_it.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders_it.properties
@@ -2,6 +2,7 @@ cantonAbbreviation=Cantone
 timetableFieldNumber=Numero del quadro d'orario
 timetableFieldNumberDescription=Designazione del campo orario
 stopPlace=Fermata
+timetabeHearingStatementId=ID
 transportCompanyAbbreviations=Abbreviazione di azienda di trasporto
 transportCompanyDescriptions=Nome azienda di trasporto
 statement=Parare
