--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -181,12 +181,12 @@
       "PATH_TEXT": "Organizzazioni aziendali"
     },
     "USER_ADMIN": {
-      "TITLE": "Gestire gli utenti",
+      "TITLE": "Gestione degli utenti",
       "TITLE_HEADER": "Amministrazione degli utenti",
       "DESCRIPTION": "Registrare, gestire e visualizzare le autorizzazioni degli utenti per atlas."
     },
     "SERVICE_POINTS": {
-      "TITLE": "Gestire i punti di servizio",
+      "TITLE": "Gestion dei punti di servizio",
       "TITLE_HEADER": "Punti di servizio",
       "DESCRIPTION": "Registrare, gestire e visualizzare i punti di esercizio e le fermate del trasporto pubblico svizzero (SLOID)."
     },
