ATLAS-1944: update translation

--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -1181,7 +1181,7 @@
       "HEADER": "Documents",
       "GUIDE_LINE_URL": "https://www.tp-info.ch/sites/default/files/2023-05/Guide_aux_crit%C3%A8res_sur_l%E2%80%99accessibilit%C3%A9_en_DiDok.pdf",
       "GUIDE_LINE_LABEL": "Guide LHand",
-      "GUIDE_LINE_ATTACHMENT_URL": "https://www.tp-info.ch/sites/default/files/2023-06/Annexe_au_guide_sur_l%E2%80%99accessibilit%C3%A9_web.xlsx",
+      "GUIDE_LINE_ATTACHMENT_URL": "https://www.tp-info.ch/sites/default/files/2024-04/Annexe_au_guide_sur_l%E2%80%99accessibilit%C3%A9_0.xlsx",
       "GUIDE_LINE_ATTACHMENT_LABEL": "Annexe au guide sur l’accessibilité",
       "GUIDE_LINE_ATTACHMENT_TECHNICAL_URL": "https://www.tp-info.ch/sites/default/files/2023-05/Annexe_au_guide_sur_l%27accessibilite_tec.xlsx",
       "ADDITIONAL_LINK_LABEL": "Liens complémentaires",
