--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -992,7 +992,11 @@
     },
     "BOARDING_AREAS": {
       "BOARDING_AREAS": "Bereiche",
-      "NEW": "Neuen Haltebereich erfassen"
+      "NEW": "Neuen Haltebereich erfassen",
+      "NOTIFICATION": {
+        "ADD_SUCCESS": "Die Haltebereich wurde erfolgreich hinzugefügt.",
+        "EDIT_SUCCESS": "Die Haltebereich wurde erfolgreich gespeichert."
+      }
     },
     "LOADING_POINTS": {
       "LOADING_POINTS": "Ladestellen",
