--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -995,8 +995,8 @@
       "BOARDING_AREAS": "Aree",
       "NEW": "Entrare nella nuova area di detenzione",
       "NOTIFICATION": {
-        "ADD_SUCCESS": "L'area di contenimento è stata aggiunta con successo.",
-        "EDIT_SUCCESS": "L'area di contenimento è stata salvata con successo."
+        "ADD_SUCCESS": "La zona di fermata è stata aggiunta con successo.",
+        "EDIT_SUCCESS": "La zona di fermata è stata salvata con successo."
       }
     },
     "LOADING_POINTS": {
