--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -993,7 +993,7 @@
     },
     "BOARDING_AREAS": {
       "BOARDING_AREAS": "Zone",
-      "NEW": "Entrare nella nuova zone di fermata",
+      "NEW": "Entrare nella nuova zona di fermata",
       "NOTIFICATION": {
         "ADD_SUCCESS": "La zona di fermata è stata aggiunta con successo.",
         "EDIT_SUCCESS": "La zona di fermata è stata salvata con successo."
