--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -669,6 +669,8 @@
     "TRANSPORT_COMPANY": "Transportunternehmen",
     "TIMETABLE_FIELD_NUMBER": "Feld-Nr.",
     "TIMETABLE_FIELD_NUMBER_DESCRIPTION": "Fahrplanfeld",
+    "TIMETABLE_FIELD_DOCUMENT": "Anhang",
+    "TIMETABLE_FIELD_LASTNAME": "Nachname",
     "OVERVIEW_TAB": {
       "OVERVIEW_ACTUAL_SUBHEADING_PREFIX": "Das Fahrplanverfahren Schweiz des BAV für den Fahrplan {{timeTableYear}} dauert von",
       "OVERVIEW_ACTUAL_SUBHEADING_POSTFIX": " {{hearingFrom}} bis zum {{hearingTo}}.",
