--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -669,6 +669,8 @@
     "TRANSPORT_COMPANY": "Entreprise de transport",
     "TIMETABLE_FIELD_NUMBER": "Numéro du tableau-horaire",
     "TIMETABLE_FIELD_NUMBER_DESCRIPTION": "Cadre horaire",
+    "TIMETABLE_FIELD_DOCUMENT": "Annexe",
+    "TIMETABLE_FIELD_LASTNAME": "Nom de famille",
     "OVERVIEW_TAB": {
       "OVERVIEW_ACTUAL_SUBHEADING_PREFIX": "La procédure d'établissement de l'horaire suisse de l'OFT pour l'horaire {{timeTableYear}} dure de",
       "OVERVIEW_ACTUAL_SUBHEADING_POSTFIX": " {{hearingFrom}} jusqu'au {{hearingTo}}.",
