ATLAS-1670 added translations

--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -832,7 +832,8 @@
         "COMMENT_LABEL": "Commentaire sur la cession de canton",
         "CANCEL": "Retour",
         "CONFIRM": "Modifier le canton"
-      }
+      },
+      "STATEMENT_TRANSFER_COUNTRY": "Cet pris de position a été transmis par le canton {{oldSwissCanton}}."
     },
     "CLOSE_TIMETABLE_HEARING": {
       "POPUP_TITLE": "Clôture de l'année horaire",
